results/smartbugs/Elysium/reentrancy/reentrancy_insecure/reentrancy_insecure.out
 ______     __         __  __     ______     __     __  __     __    __    
/\  ___\   /\ \       /\ \_\ \   /\  ___\   /\ \   /\ \/\ \   /\ "-./  \   
\ \  __\   \ \ \____  \ \____ \  \ \___  \  \ \ \  \ \ \_\ \  \ \ \-./\ \  
 \ \_____\  \ \_____\  \/\_____\  \/\_____\  \ \_\  \ \_____\  \ \_\ \ \_\ 
  \/_____/   \/_____/   \/_____/   \/_____/   \/_/   \/_____/   \/_/  \/_/ 
                                                                           
Compiling source code...
Error: Solidity compilation failed!
smartbugs/dataset/reentrancy/reentrancy_insecure.sol:7:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.26+commit.4563c3fc.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.5.0;
^---------------------^

smartbugs/dataset/reentrancy/reentrancy_insecure.sol:17:9: Warning: Different number of components on the left hand side (2) than on the right hand side (1).
 ... (bool success, ) = msg.sender.call.value(amountToWithdraw)("") ... 
     ^------------------------------------------------------------^

Error: The compilation did not produce any output!
Please check the source code!
